objects/Quote_Billing_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <formula>Quote__r.End_User_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_Eligible__c</fullName>
        <formula>AND( 
   OR(TEXT(Quote__r.Order__r.status__c) = &apos;Approved&apos;, TEXT(Quote__r.Order__r.status__c) = &apos;Completed&apos;),
      Invoice_Date__c &gt;= DATE( YEAR(TODAY()), 
                               CASE(MONTH(TODAY()), 
                                     1, 1, 
                                     2, 1,
                                     3, 1,
                                     4, 4, 
                                     5, 4,
                                     6, 4,
                                     7, 7, 
                                     8, 7,
                                     9, 7,
                                    10, 10, 
                                    11, 10,
                                    12, 10,
                                    1), 
                               1)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasting Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <externalId>true</externalId>
        <label>Invoice #</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Big_Six__c</fullName>
        <formula>Quote__r.End_User_ID__r.New_Big_Six__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Big Six</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Is_Primary__c</fullName>
        <formula>Quote__r.BigMachines__Is_Primary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Order_Status__c</fullName>
        <formula>TEXT(Quote__r.Order__r.status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Revision_No__c</fullName>
        <formula>Quote__r.Revision_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Revision No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <formula>Quote__r.BigMachines__Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Quote Billing Plans</relationshipLabel>
        <relationshipName>Quote_Billing_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Support_Period_End_Date__c</fullName>
        <label>Support Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Period_Start_Date__c</fullName>
        <label>Support Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Quote Billing Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QBP-{000000}</displayFormat>
        <label>Quote Billing Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Billing Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>